--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ h4 {
   position: absolute;
   top: 10px;
   left: 10px;
+  font-size: 2rem;
 }
 
 .close {
@@ -105,10 +106,12 @@ h4 {
   opacity: 1;
 }
 
+
 .menu {
   display: none;
   position: absolute;
-  height: 50%;
+  height: 30%;
+  min-height: 250px;
   width: 37%;
   top: 0;
   left: 0;
@@ -242,4 +245,8 @@ h4 {
 
 .margin-top--small {
   margin-top: 15px;
+}
+
+.fas {
+  font-size: 1.5rem;
 }
